--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -53,6 +53,16 @@
           </property>
          </widget>
         </item>
+        <item>
+         <widget class="QPushButton" name="talkForMePushButton">
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Send your messages to the bot&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
+          <property name="text">
+           <string>Talk for me</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </item>
      </layout>
