--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -56,7 +56,7 @@
         <item>
          <widget class="QPushButton" name="talkForMePushButton">
           <property name="toolTip">
-           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Send your messages to the bot&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Make the bot talk to itself&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
           <property name="text">
            <string>Talk for me</string>
